# req

./: Cargo.toml
src/: http.rs  logger.rs  main.rs  template.rs
src/cmd/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs  run.rs  shared.rs
src/cmd/template/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  relocate.rs  rename.rs
src/template/: mod.rs  project.rs  variable.rs
src/template_bak/: variable.rs
