[package]
name = "req"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
colored_json = "3.2.0"
dialoguer = "0.11.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
uuid = { version = "1.3.4", features = ["v4"] }
